1999-10-02  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTheme/FvwmTheme.1: reviewed new FvwmTheme man page

	* FvwmButtons/FvwmButtons.c (Loop): fixed expanding arguments for
	respawned applications
	(Loop): actions can be bound to panel buttons too

	* FvwmButtons/parse.c (expand_action): use safemalloc instead of malloc

1999-10-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTheme/FvwmTheme.c (parse_colorset): fixed coredump

1999-09-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (ParseOptions): rewrote some redundant code

	* FvwmButtons/parse.c (ParsePanel):
	* FvwmButtons/draw.c (RedrawButton): fixed panel option 'indicator'
	without arguments

	* FvwmScroll/FvwmScroll.c (GetTargetWindow): use library function
	handles 'Escape' to cancel and other keystrokes

	* FvwmIdent/FvwmIdent.c (GetTargetWindow): FvwmIdent can be canceled
	with 'Escape' and select with 'Enter' and 'Space'.
	(GetTargetWindow): handles keyboard shortcuts as well
	moved function to lib

1999-09-30  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmTheme/FvwmTheme.c (get_simple_color):
	(parse_colorset): rewrote colour set parsing; it now takes a comma
	separated list of arguments.

1999-09-29  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmWinList/FvwmWinList.c (ParseConfigLine): IconFore/Back default to
	the Fore/Back colours

1999-09-28  Paul D. Smith  <psmith@gnu.org>

	* FvwmForm/Makefile.am: Add CLEANFILES to remove some extra stuff.
	* FvwmCommand/Makefile.am: Ditto.
	* FvwmCommand/scripts/Makefile.am: Ditto.

	Patch from Harald Dunkel <harri@Synopsys.COM>.

	* FvwmButtons/FvwmButtons.h: Removed unneeded declarations of
	screen, x, y, w, h, xneg, yneg.
	* FvwmPager/FvwmPager.c: Removed dup declaration of fd_width.
	* FvwmScript/Widgets/Tools.h: Add include of <sys/select.h>.
	* FvwmScroll/FvwmScroll.c: The type of fd_width is fd_set_size_t,
	not int.

1999-09-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCpp/FvwmCpp.c (cpp_defs):
	* FvwmM4/FvwmM4.c (m4_defs):